Made modification to markdown

--- a/_notebooks/2021-09-29-Building an image classifier using Fastai.ipynb
+++ b/_notebooks/2021-09-29-Building an image classifier using Fastai.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "---\n",
     "\n",
-    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. \n",
+    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/image%20classification/2021/10/03/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. \n",
     "\n",
     "---"
    ]
@@ -1546,7 +1546,7 @@
     "We'll slowly build upon this and make this model better while learning more about building state-of-the-art models in the upcoming posts.\n",
     "\n",
     "---\n",
-    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. \n",
+    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/image%20classification/2021/10/03/Improving-baseline-model.html#Discriminative-learning-rates) where I employ Fastai techniques with an aim to build a SOTA model. \n",
     "\n",
     "---"
    ]
@@ -1555,7 +1555,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "### Learning resources\n",
     "\n",
     "1. Corey Schafer's [Python Tutorials](https://www.youtube.com/watch?v=YYXdXT2l-Gg&list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
