--- a/_notebooks/2021-10-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2021-10-27-Introduction to NLP using Fastai.ipynb
@@ -783,7 +783,7 @@
     "\n",
     "Since different layers of the model capture different types of information and thus they should be fine-tuned to different extents. \n",
     "\n",
-    "This idea is similar as the use of discriminative learning rates used in CV applications which I explained in detail in my previous [post](https://harish3110.github.io/through-tinted-lenses/image%20classification/2020/04/10/Improving-baseline-model.html#Discriminative-learning-rates)."
+    "This idea is similar as the use of discriminative learning rates used in CV applications which I explained in detail in my previous [post](https://harish3110.github.io/through-tinted-lenses/image%20classification/2021/10/03/Improving-baseline-model.html#Discriminative-learning-rates)."
    ]
   },
   {
@@ -2021,7 +2021,7 @@
    "source": [
     "## References\n",
     "\n",
-    "- Fastai v2 [Documentation](www.dev.fasta.ai)\n",
+    "- Fastai [Documentation](https://docs.fast.ai)\n",
     "- Fastbook Chapter 10: [NLP Deep Dive](https://github.com/fastai/fastbook/blob/master/10_nlp.ipynb)\n",
     "\n",
     "---\n",
