--- a/_notebooks/2021-10-03-Improving baseline model.ipynb
+++ b/_notebooks/2021-10-03-Improving baseline model.ipynb
@@ -18,17 +18,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
+    "---\n",
     "## Introduction "
    ]
   },
@@ -39,7 +33,7 @@
    },
    "source": [
     "In my previous blog post [\"Building an image classifier using Fastai\n",
-    "\"](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/2020/03/29/Building-an-image-classifier-using-Fastai-V2.html), I introduced the Fastai V2 library by building a baseline flower classifier model on the flowers-102 dataset. \n",
+    "\"](https://harish3110.github.io/through-tinted-lenses/computer%20vision/image%20classification/2021/09/29/Building-an-image-classifier-using-Fastai.html), I introduced the Fastai V2 library by building a baseline flower classifier model on the flowers-102 dataset. \n",
     "\n",
     "The baseline model created achieved an accuracy of about 96.2% on the validation set. The main aim of this post is to improve on my current baseline by employing some of the strategies taught in the Fastai course in order to reach the SOTA for the flowers-102 dataset which is an accuracy of 99.7%. \n",
     "\n",
